--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 .cdx-list {
     margin: 0;
-    padding-left: 40px !important;
+    padding-left: 40px;
     outline: none;
     min-height: 1.45em;
     counter-reset: index;
