--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 .cdx-list {
     margin: 0;
-    padding-left: 40px;
+    padding-left: 19px;
     min-height: 1.45em;
     outline: none;
     counter-reset: index;
@@ -20,11 +20,11 @@
     &--unordered {
         ^&__item {
             &::before {
-                position: absolute;
-                margin-left: -21px;
-                margin-top: 9px;
+                display: inline-block;
                 width: 5px;
                 height: 5px;
+                margin: -2px 16px 0 0;
+                vertical-align: middle;
                 border-radius: 50%;
                 background: #7b7e89;
                 content: '';
@@ -35,9 +35,9 @@
     &--ordered {
         ^&__item {
             &::before {
-                position: absolute;
-                margin-left: -23px;
-                margin-top: 1px;
+                display: inline-block;
+                margin: -2px 16px 0 -2px;
+                vertical-align: middle;
                 font-size: 13px;
                 font-weight: 500;
                 color: #7b7e89;
