Add multiline support

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
     counter-reset: index;
 
     &__item {
+        display: flex;
+        align-items: flex-start;
         padding: 5.5px 0;
         margin: 0;
         border: 0 solid transparent;
@@ -20,12 +22,11 @@
     &--unordered {
         ^&__item {
             &::before {
-                display: inline-block;
                 width: 5px;
                 height: 5px;
-                margin: -2px 16px 0 0;
-                vertical-align: middle;
+                margin: 8px 16px 0 0;
                 border-radius: 50%;
+                flex-shrink: 0;
                 background: #7b7e89;
                 content: '';
             }
@@ -35,9 +36,10 @@
     &--ordered {
         ^&__item {
             &::before {
-                display: inline-block;
-                margin: -2px 16px 0 -2px;
-                vertical-align: middle;
+                margin: 0 0 0 -1px;
+                padding-right: 7px;
+                width: 15px;
+                flex-shrink: 0;
                 font-size: 13px;
                 font-weight: 500;
                 color: #7b7e89;
