--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 .cdx-list {
     margin: 0;
-    padding-left: 19px;
+    padding-left: 40px;
     min-height: 1.45em;
     outline: none;
     counter-reset: index;
 
     &__item {
-        display: flex;
-        align-items: flex-start;
+        display: block;
         padding: 5.5px 0;
         margin: 0;
         border: 0 solid transparent;
@@ -17,16 +16,23 @@
         box-shadow: none;
         list-style: none;
         counter-increment: index;
+
+        &::after {
+            content: "";
+            clear: both;
+            display: table;
+        }
     }
 
     &--unordered {
         ^&__item {
             &::before {
+                display: block;
+                margin: 8px 0 0 -20px;
                 width: 5px;
                 height: 5px;
-                margin: 8px 16px 0 0;
+                float: left;
                 border-radius: 50%;
-                flex-shrink: 0;
                 background: #7b7e89;
                 content: '';
             }
@@ -36,10 +42,11 @@
     &--ordered {
         ^&__item {
             &::before {
-                margin: 0 0 0 -1px;
-                padding-right: 7px;
-                width: 15px;
-                flex-shrink: 0;
+                display: block;
+                min-width: 15px;
+                margin-left: -30px;
+                float: left;
+                text-align: right;
                 font-size: 13px;
                 font-weight: 500;
                 color: #7b7e89;
