--- a/src/index.css
+++ b/src/index.css
@@ -1,58 +1,25 @@
 .cdx-list {
     margin: 0;
     padding-left: 40px;
-    min-height: 1.45em;
     outline: none;
-    counter-reset: index;
 
     &__item {
-        display: block;
         padding: 5.5px 0;
-        margin: 0;
-        border: 0 solid transparent;
-        min-height: 1.45em;
-        width: auto;
         box-sizing: content-box;
+        border: 0 solid transparent;
         box-shadow: none;
-        list-style: none;
-        counter-increment: index;
-
-        &::after {
-            content: "";
-            clear: both;
-            display: table;
-        }
     }
 
     &--unordered {
-        ^&__item {
-            &::before {
-                display: block;
-                margin: 0.5em 0 0.45em -20px;
-                width: 5px;
-                height: 5px;
-                float: left;
-                border-radius: 50%;
-                background: #7b7e89;
-                content: '';
-            }
-        }
+        list-style: disc;
     }
 
     &--ordered {
+        list-style: decimal;
+
         ^&__item {
-            &::before {
-                display: block;
-                min-width: 15px;
-                margin-left: -30px;
-                margin-top: 1px;
-                float: left;
-                text-align: right;
-                font-size: 0.86em;
-                font-weight: 500;
-                color: #7b7e89;
-                content: counter(index);
-            }
+            margin-left: -3px;
+            padding-left: 3px;
         }
     }
 
